# Helix-Tentacle

./: .gitignore  LICENSE  README.md  README.zh-CN.md  config.py  pyproject.toml  tentacle.py
cli/: main.py
cli/commands/: explore.py  extract.py  scan.py  search.py  shared.py
cookies/: .gitignore
core/: dehydrator.py  prober.py
domains/: zhihu_demo.yaml
tentacle/: __init__.py  server.py
tentacle/api/: __init__.py  middleware.py  v1_router.py
tentacle/common/: __init__.py  config.py  cookie_loader.py  decorators.py  logging.py  tracing.py
tentacle/core/: __init__.py  extractor.py  safe_fetcher.py  scanner.py  search_proxy.py
tentacle/schemas/: __init__.py  exceptions.py  feedback.py  forage.py  policy.py  search.py
tests/: test_basic.py
